Fixed the layout

--- a/index.html
+++ b/index.html
@@ -34,54 +34,57 @@
       <section class="intro-section">
         <div class="container">
           <h1 class="intro-section-title">Join our community</h1>
-          <h2 class="intro-section-sub-title">30-day, hassle-free money back guarantee</h2>
-          <p class="intro-section-text">Gain access to our full library of tutorials along with expert code reviews.
-            Perfect for any developers who are serious about honing their skills.
-          </p>
+          <div class="intro-text-group">
+            <h2 class="intro-section-sub-title">30-day, hassle-free money back guarantee</h2>
+            <p class="intro-section-text">Gain access to our full library of tutorials along with expert code reviews.
+              Perfect for any developers who are serious about honing their skills.
+            </p>
+          </div>
         </div>
       </section>
 
-      <div class="flex-group">
-        <div class="flex-group-container">
+      <div class="grid-group">
+        <div class="grid-group-container">
           <section class="pricing-section">
             <div class="container">
               <h2> Monthly Subscription</h2>
-              <div class="col">
-                <p class="price-text"> &dollar;29 <span class="price-duration">per month</span></p>
-                <p>Full access for less than &dollar;1 a day</p>
-                <button class="button">Sign Up</button>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat reprehenderit, eos consequatur dicta minus quo maxime! Accusantium nostrum exercitationem tempore!
+              <div class="pricing-group-text">
+                <div class="span-container">
+                  <div class="span-row">
+                    <p class="price-text"> &dollar;29 </p>
+                    <p class="price-duration"> <span>per month</span> </p>
+                  </div>
+                  <p>Full access for less than &dollar;1 a day</p>
+                </div>
               </div>
+              <button class="button">Sign Up</button>
             </div>
           </section>
 
           <section class="footer-section">
             <div class="container">
-              <h2>Why Us</h2>
+              <h2 class="footer-title">Why Us</h2>
               <div class="footer-section-container">
-                <p>Tutorials by industry experts</p>
-                <p> Peer &amp; expert code review</p>
-                <p>Coding exercises</p>
-                <p>Access to our GitHub repos</p>
-                <p>Community forum</p>
-                <p>Flashcard decks</p>
-                <p>New videos every week</p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, natus.
+                <p>Tutorials by industry experts<br>
+                  Peer &amp; expert code review<br>
+                  Coding exercises<br>
+                  Access to our GitHub repos<br>
+                  Community forum<br>
+                  Flashcard decks<br>
+                  New videos every week</p>
               </div>
           </section>
         </div>
       </div>
     </div>
   </main>
-  <!-- <footer>
-          <p class="attribution">
-            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-            Coded by <a href="#">Divine Ugorji</a>.
-          </p>
-        </footer> -->
-
   </div>
-
+  <p class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Divine Ugorji</a>.
+  </p>
+  </footer>
 </body>
+<footer>
 
 </html>
